Fixed wrong background color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
 // Variables
 
 $basecolor: #81ddb9;
-$dark-background-color: black;
+$dark-background-color: #1b1b1b;
 
 $max-width: 768px;
 
